--- a/public/about/index.html
+++ b/public/about/index.html
@@ -12,12 +12,12 @@
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
-    <link rel="shortcut icon" href="http://localhost:1313/img/favicon.ico">
+    <link rel="shortcut icon" href="https://davidnix.github.io/blogimg/favicon.ico">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/2.1.2/normalize.min.css">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="http://localhost:1313/css/screen.css">
-    <link rel="stylesheet" href="http://localhost:1313/css/github.css">
+    <link rel="stylesheet" href="https://davidnix.github.io/blogcss/screen.css">
+    <link rel="stylesheet" href="https://davidnix.github.io/blogcss/github.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/styles/default.min.css">
 
     <!-- Stylesheet for theme color -->
@@ -34,7 +34,7 @@
 
     <header id="site-head">
 	
-	<h1 class="blog-title"><a href="http://localhost:1313/">David Nix</a></h1>
+	<h1 class="blog-title"><a href="https://davidnix.github.io/blog">David Nix</a></h1>
 	
 	
 	<h1 class="blog-subtitle">Native App Zealot, Golang Evangelist</h1>
@@ -44,7 +44,7 @@
 <nav class="menu" role="nav">
     <ul>
         
-        	<li class="nav nav-current"><a href="http://localhost:1313/about">About</a></li>
+        	<li class="nav nav-current"><a href="https://davidnix.github.io/blog/about">About</a></li>
       	
     </ul>
 </nav>
@@ -78,12 +78,12 @@
 		    <a href="" target="_blank" title="RSS"><i class="fa fa-2x fa-fw fa-rss"></i> <span class="hidden">RSS</span></a>
 		</section>
 
-		<section class="copyright">&copy; 2015 <a href="http://localhost:1313/">David Nix</a>. </section>
+		<section class="copyright">&copy; 2015 <a href="https://davidnix.github.io/blog">David Nix</a>. </section>
 	</div>
 </footer>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="http://localhost:1313/js/index.js"></script>
-<script src="http://localhost:1313/js/smooth-scroll.min.js"></script>
+<script src="https://davidnix.github.io/blogjs/index.js"></script>
+<script src="https://davidnix.github.io/blogjs/smooth-scroll.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/highlight.min.js"></script>
 
 <script>
@@ -98,8 +98,5 @@
 
 
 
-<script data-no-instant>document.write('<script src="http://'
-        + (location.host || 'localhost').split(':')[0]
-		+ ':1313/livereload.js?mindelay=10"></'
-        + 'script>')</script></body>
+</body>
 </html>
