--- a/public/404.html
+++ b/public/404.html
@@ -1,6 +1,6 @@
 <header id="site-head">
 	
-	<h1 class="blog-title"><a href="https://davidnix.github.io/blog">David Nix</a></h1>
+	<h1 class="blog-title"><a href="https://davidnix.github.io/blog/">David Nix</a></h1>
 	
 	
 	<h1 class="blog-subtitle">Native App Zealot, Golang Evangelist</h1>
@@ -26,6 +26,6 @@
 		    <a href="https://davidnix.github.io/blog/index.xml" target="_blank" title="RSS"><i class="fa fa-2x fa-fw fa-rss"></i> <span class="hidden">RSS</span></a>
 		</section>
 
-		<section class="copyright">&copy; 2015 <a href="https://davidnix.github.io/blog">David Nix</a>. </section>
+		<section class="copyright">&copy; 2015 <a href="https://davidnix.github.io/blog/">David Nix</a>. </section>
 	</div>
 </footer>
